# 32raven

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  check_forbidden.sh  cmake_install.cmake  firmware-version-badge.json  forbidden_exceptions.txt
.devcontainer/: devcontainer.json
.devcontainer/skel/: .bashrc
.github/workflows/: notify-sil.yml  publish-firmware-version-badge.yml
config/: 32raven.config  AGENTS.md  Kconfig  ee.toml
esp32/: .clangd  AGENTS.md  CMakeLists.txt  check_forbidden.sh  partitions.csv  sdkconfig  sdkconfig.old
esp32/drivers/: button.cpp  button.hpp  buzzer.cpp  buzzer.hpp  ep2_receiver.cpp  ep2_receiver.hpp  i2c.cpp  i2c.hpp  led.cpp  led.hpp  programmer.cpp  programmer.hpp  ssd1306_panel.cpp  ssd1306_panel.hpp  uart.cpp  uart.hpp  wifi.cpp  wifi.hpp
esp32/libs/: state_machine.hpp
esp32/main/: CMakeLists.txt  command_handler.cpp  command_handler.hpp  ctx.cpp  ctx.hpp  logv2.hpp  main.cpp  states.cpp  states.hpp  system.cpp  system.hpp  user_config.hpp
esp32/services/: command_handler.cpp  command_handler.hpp  display_manager.cpp  display_manager.hpp  fc_link.cpp  fc_link.hpp  flight_controller.cpp  flight_controller.hpp  mavlink.cpp  mavlink.hpp  mavlink_cmd.cpp  mavlink_mission.cpp  mavlink_param.cpp  mavlink_rc_task.cpp  mavlink_rx.cpp  mavlink_task.cpp  mavlink_transport.hpp  mavlink_tx.cpp  mavlink_tx_task.cpp  mavlink_udp_task.cpp  panic.cpp  panic.hpp  programmer.cpp  programmer.hpp  system.cpp  system.hpp  tcp_server.cpp  tcp_server.hpp  telem_uart_server.cpp  telem_uart_server.hpp  timebase.cpp  timebase.hpp  tone_player.cpp  tone_player.hpp  udp_server.cpp  udp_server.hpp  ui.cpp  ui.hpp  usb_cdc_server.cpp  usb_cdc_server.hpp  (+2 more)
esp32/ui/: display_renderer.cpp  display_renderer.hpp
esp32/ui/adafruit_gfx_compat/: Adafruit_I2CDevice.h  Adafruit_SPIDevice.h  Arduino.h  Print.h  WProgram.h
esp32/ui/assets/bitmap/: boot_logo.hpp  chip_bitmap.hpp  chip_verify_bitmap.hpp  gear0_bitmap.hpp  gear1_bitmap.hpp  magnifying_glass_bitmap.hpp  mavlink0_bitmap.hpp  mavlink1_bitmap.hpp  mavlink2_bitmap.hpp  mavlink3_bitmap.hpp  pc_bitmap.hpp  serving_bitmap.hpp  wifi_bitmap.hpp
esp32/ui/widgets/: boot_widget.cpp  boot_widget.hpp  error_widget.cpp  error_widget.hpp  main_ui_widget.cpp  main_ui_widget.hpp  matrix_widget.cpp  matrix_widget.hpp  rc_channels_widget.cpp  rc_channels_widget.hpp  renderer_demo_widget.cpp  renderer_demo_widget.hpp  resource_utilization_widget.cpp  resource_utilization_widget.hpp
esp32/utils/: http_server.cpp  http_server.hpp  tcp_server.cpp  timebase.cpp  timebase.hpp
libs/: AGENTS.md  CMakeLists.txt
libs/inc/: dispatcher.hpp  error_code.hpp  flight_mode.hpp  message.hpp  multirotor_mixer.hpp  ring_buffer.hpp  state_machine.hpp
libs/include/: message.hpp  ring_buffer.hpp  state_machine.hpp
libs/src/: error_code.cpp
scripts/: 32raven_menuconfig.py  AGENTS.md  check_pinmap.py  esp32_size.py  generate_ee_schema.py  generate_esp32_config.py  generate_firmware_ver.py  generate_stm32_config.py  kconfig_gen.py  pin_constraints.py  setup-vscode.sh  tcp_client.py
scripts/lint/: check_error_codes.py  check_forbidden.sh  check_pinmap.py
scripts/templates/: ee_schema.hpp.j2  esp32_config.hpp.j2  esp32_limits.hpp.j2  stm32_config.hpp.j2  stm32_limits.hpp.j2
stm32/: .clangd  .mxproject  32Raven.ioc  AGENTS.md  CMakeLists.txt  STM32F407XX_FLASH.ld  stm32-baremetal.ioc
stm32/Core/Inc/: DShotCodec.hpp  board.h  board.hpp  ctx.hpp  panic.hpp  states.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h  system.hpp  vehicle_state.hpp
stm32/Core/Src/: DShotCodec.cpp  ctx.cpp  cxa_atexit_stub.cpp  main.cpp  panic.cpp  printf_impl.cpp  states.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sysmem.c  system.cpp
stm32/Drivers/Inc/: button.hpp  dshot_tim1.hpp  ee.hpp  gpio.hpp  icm42688p.hpp  icm42688p_reg.hpp  irq_priority.hpp  m10.hpp  rc_receiver.hpp  time_base.hpp  uart.hpp  watchdog.hpp
stm32/Drivers/Src/: battery.cpp  button.cpp  dshot_tim1.cpp  ee.cpp  esc_telemetry.cpp  gpio.cpp  icm42688p.cpp  led.cpp  m10.cpp  spi.cpp  uart.cpp
stm32/Drivers/USER/cc/: DShotTim1.cpp  GPIO.cpp  I2C.cpp  LED.cpp  TimeBase.cpp  battery.cpp  button.cpp  dma.cpp  dshot_tim1.cpp  ee.cpp  esc_telemetry.cpp  gpio.cpp  i2c.cpp  icm20948.cpp  icm42688p.cpp  led.cpp  m10.cpp  m9n.cpp  rc_receiver.cpp  spi.cpp  time_base.cpp  uart.cpp
stm32/Drivers/USER/inc/: DShotTim1.hpp  GPIO.hpp  I2C.hpp  LED.hpp  TimeBase.hpp  UserConfig.hpp  battery.hpp  board_config.hpp  button.hpp  critical_section.hpp  dma.hpp  dshot_tim1.hpp  ee.hpp  esc_telemetry.hpp  gpio.hpp  i2c.hpp  icm20948.hpp  icm20948_reg.hpp  icm42688p.hpp  icm42688p_reg.hpp  irq_priority.hpp  led.hpp  m10.hpp  m10_reg.hpp  m9n.hpp  m9n_reg.hpp  rc_receiver.hpp  spi.hpp  time_base.hpp  uart.hpp  user_config.hpp  watchdog.hpp
stm32/Services/: mixer.md
stm32/Services/Inc/: DShotCodec.hpp  ahrs.hpp  attitude_controller.hpp  attitude_estimator.hpp  command_handler.hpp  config_storage.hpp  config_store.hpp  crsf_link_service.hpp  dshot_codec.hpp  esc_service.hpp  fc_link.hpp  m10_service.hpp  m9n_service.hpp  multirotor_mixer.hpp  panic.hpp  rate_controller.hpp  stat_publisher.hpp
stm32/Services/Src/: DShotCodec.cpp  ahrs.cpp  attitude_controller.cpp  attitude_estimator.cpp  command_handler.cpp  config_storage.cpp  config_store.cpp  crsf_link_service.cpp  dshot_codec.cpp  esc_service.cpp  fc_link.cpp  m10_service.cpp  m9n_service.cpp  multirotor_mixer.cpp  panic.cpp  rate_controller.cpp  stat_publisher.cpp
stm32/cmake/: arm-gcc-stm32f4.cmake  gcc-arm-none-eabi.cmake
stm32/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
stm32/lib/CMSIS_F4xx/: stm32f407xx.h  stm32f4xx.h
stm32/lib/control/: pid.hpp  setpoint_smoother.hpp
stm32/lib/math/: quaternion.hpp  vec3.hpp
tools/: esp32_client.py  esp32_size_metrics.py  png_conv.py  raven_dashboard.py
